[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "readonce"
authors = [{name = "Shako Rzayev", email = "rzayev.sehriyar@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "icontract >=2.6.2",
    "cryptography >=40.0.2",
]

[project.optional-dependencies]
dev = [
    "black >=22.3.0",
    "pylint >=2.12.2",
    "isort >=5.9.3",
    "autoflake >=1.4",
    "flake8 >=4.0.1",
    "pre-commit >=2.17.0",
    "pytype >=2022.1.31",
    "pydantic >=1.10.2",
    ]
test = [
    "pytest >=7.3.1",
    "pytest-cov >= 3.0.0",
]

[tool.isort]
profile = "black"
py_version = 310
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'